2007-02-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-error-with-buffer): New defsubst.  Apply it
	wherever there is `pop-to-buffer', followed by `tramp-error'.
	(tramp-maybe-open-connection): Rename `tramp-gw-http-method' to
	`tramp-gw-tunnel-method'.

	* tramp-gw.el (tramp-gw-tunnel-method)
	(tramp-gw-default-tunnel-port): Renamed from
	`tramp-gw-http-method' and `tramp-gw-default-http-port',
	respectively.  Apply it everywhere.
	(tramp-gw-open-connection): Improve doc-string.  Use only type 5
	for `socks-server', we have our own 'http implementation.
	(tramp-gw-open-network-stream): Improve error handling.
	(tramp-gw-basic-authentication): Bind `tramp-current-*' locally
	because of password cache key.

2007-02-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Add "StrictHostKeyChecking=no" to
	`tramp-gw-args' of ssh, ssh1 and ssh2 methods.
	(tramp-maybe-open-connection): Implement changed interface of
	`tramp-gw-open-connection'.
	(tramp-send-eof): Removed.
	(tramp-file-name-real-host, tramp-file-name-port): New defsubst.
	(tramp-read-passwd): New parameter PROMPT.

	* tramp-gw.el: Complete rewrite.  Use socks.el for SOCKS server;
	implement HTTP tunnels on its own.

2007-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gw.el (tramp-gw-current-gw-vector)
	(tramp-gw-current-http-buffer): New defvars.
	(tramp-advice-url-http-parse-response)
	(tramp-advice-url-http-create-request, tramp-gw-aux-proc-sentinel)
	(tramp-gw-open-connection): Make them fit for proxy authentication.

2007-02-14  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Add tramp-gw.el

	* tramp-gw.el: New package.

	* tramp.el (top): Require tramp-gw.
	(tramp-methods): Add `tramp-gw-args' and `tramp-default-port' for
	ssh and telnet methods.
	(tramp-message): Catch errors.
	(tramp-action-yesno, tramp-action-yn): Trace messages.
	(tramp-maybe-open-connection): Handle gateways.